--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -2,16 +2,12 @@
 
 one:
   url: MyString
-  type: 1
-  last_change: 2025-06-25
   body: MyText
-  digest: MyString
-  project: one
+  sha: MyString
+  last_change: 2025-06-11 23:35:09
 
 two:
   url: MyString
-  type: 1
-  last_change: 2025-06-25
   body: MyText
-  digest: MyString
-  project: two
+  sha: MyString
+  last_change: 2025-06-11 23:35:09
